fixing issue in which data layers were not visible upon initial view of data panel from fullscreen.  also straightening out the text on the expandable map buttons.

--- a/media/marco/css/marco_style.css
+++ b/media/marco/css/marco_style.css
@@ -948,6 +948,10 @@ img + h3 {
     filter: alpha(opacity=100);
 }
 
+#basemaps .btn i {
+    width: 20px;
+}
+
 #map.zoomBox .olHandlerBoxZoomBox {
 	border: 2px solid #2d8998;
 }
